finished rough draft of ch7

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -35,8 +35,7 @@ class labels for.
 > If you do, the model gets to "see" the test data in advance, making it look more accurate than it really is. Imagine
 > how bad it would be to overestimate your classifier's accuracy when predicting whether a patient's tumour is malignant or benign!
 
-<center><img src="img/training_validation.jpeg" width="600" /></center>
-**(TODO CHANGE VALIDATION TO TEST IN IMG)**
+<center><img src="img/training_test.jpeg" width="600" /></center>
 
 How exactly can we assess how well our predictions match the true labels for the observations in the test set? One way 
 we can do this is to calculate the **prediction accuracy**. This is the fraction of examples for which the classifier made
@@ -44,9 +43,7 @@ the correct prediction. To calculate this we divide the number of correct predic
 measures for how well our classifier performed include *precision* and *recall*; these will not be discussed here, but 
 you will encounter them in other more advanced courses on this topic. This process is illustrated below:
 
-<center><img src="img/ML-paradigm.png" width="800" /></center>
-**(TODO CHANGE VALIDATION TO TEST IN IMG)**
-
+<center><img src="img/ML-paradigm-test.png" width="800" /></center>
 
 In R, we can use the `caret` package not only to perform K-nearest neighbour classification, but also to assess how well our 
 classification worked. Let's start by loading the necessary libraries, reading in the breast cancer data from the previous
@@ -413,7 +410,7 @@ for (i in 1:length(ks)){
 grid.arrange(grobs = plots)
 ```
 </center>
-**(TODO fix this plot; they are way too small...)**
+**(TODO these plots show the right thing but are way too small...)**
 
 
 <!--By using cross-validation to choose $k$ we were able to slightly increase our accuracy, but can we still do better? Perhaps. We can start 
@@ -495,7 +492,7 @@ Classification algorithms use one or more quantitative variables to predict the 
 K-nearest neighbour algorithm in particular does this by first finding the K points in the training data nearest to the new observation,
 and then returning the majority class vote from those training observations. We can evaluate a classifier by splitting the data
 randomly into a training and test data set, using the training set to build the classifier, and using the test set to estimate its
-accuracy. To tune the classifier (e.g., select the K in K-nearest neighbours), we compute and only using the classification
+accuracy. To tune the classifier (e.g., select the K in K-nearest neighbours), we maximize accuracy estimates from cross-validation.
 
 <center>
 <figure class="image">
@@ -506,13 +503,13 @@ A typical 10-fold cross-validation data set split. <br>Source: https://towardsda
 </figure>
 </center>
 
-The overall workflow for performing K-nearest neighbour
-classification in `caret` is as follows:
+The overall workflow for performing K-nearest neighbour classification in `caret` is as follows:
 
 1. Use the `createDataPartition` function to split the data into a training and test set. Put the test set aside for now.
-2. Use
-- write down the overall workflow here
-
+2. Use the `trainControl` function to specify whether to use cross-validation and how many folds
+3. Use the `train` function to train and evaluate the classifier for different values of $K$
+4. Retrain the classifier on *all* the training data, using the best parameter from the previous step
+5. Evaluate the estimated accuracy of the classifier on the test set
 
 **Strengths:**
 
