--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -237,8 +237,8 @@ As with plain text files, you should always try to explore the data file before 
 
 ## Reading data from a database
 
-Another very common form of data storage to be read into R for the purpose of data analysis is the relational database. Common database software you might encounter include 
-SQLite, MySQL, PosgreSQL, Oracle, and many more. All of these employ SQL (*structured query language*) to pull data from the database. Thankfully, you don't need to know SQL
+Another very common form of data storage to be read into R for the purpose of data analysis is the relational database. There are many Relational Database Management Systems (RDBMS),  such as
+SQLite, MySQL, PosgreSQL, Oracle, and many more. Almost all RDBMS employ SQL (*structured query language*) to pull data from the database. Thankfully, you don't need to know SQL
 to analyze data from a database; 
 several packages have been written 
 that allow R to connect to relational databases and use the R programming language as the front end (what the user types in) to pull data from them. In this book we will 
@@ -246,7 +246,7 @@ give examples of how to do this using R with SQLite and PostgreSQL databases.
 
 ### Reading data from a SQLite database
 
-SQLite is probably the simplest relational database that one can use in combination with R. SQLite databases are self-contained and usually stored and accessed locally on one computer. Data is usually stored in a file with a `.db` extension. Similar to Excel files, these are not plain text files and cannot be read in a plain text editor. 
+SQLite is probably the simplest relational database that one can use in combination with R. SQLite databases are self-contained and usually stored and accessed locally on one's computer. Data is usually stored in a file with a `.db` extension. Similar to Excel files, these are not plain text files and cannot be read in a plain text editor. 
 
 The first thing you need to do to read data into R from a database is to connect to the database. We do that using the `dbConnect` function from the `DBI` (database interface) package. This does not read in the data, but simply tells R where the database is and opens up a communication channel.
 
@@ -262,7 +262,7 @@ tables <- dbListTables(con_state_data)
 tables
 ```
 
-We only get one table name returned form calling `dbListTables`, and this tells us that there is only one table in this data base. To reference a table in the database so we can do things like select columns and filter rows, we use the `tbl` function from the `dbplyr` package:
+We only get one table name returned form calling `dbListTables`, and this tells us that there is only one table in this database. To reference a table in the database so we can do things like select columns and filter rows, we use the `tbl` function from the `dbplyr` package:
 
 ```{r}
 library(dbplyr)
@@ -318,7 +318,7 @@ function is listed below:
 
 - `dbname` - the name of the database (a single PostgreSQL instance can host more than one database)
 - `host` - the URL pointing to where the database is located
-- `port` - the communication endpoint between R and the PostgreSQL database (this is typically always 5432 for PostgreSQL)
+- `port` - the communication endpoint between R and the PostgreSQL database (this is typically 5432 for PostgreSQL)
 - `user` - the username for accessing the database
 - `password` - the password for accessing the database
 
