--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -575,7 +575,7 @@ and the benign vote will always win. For example, look what happens for a new tu
 that were tagged as malignant:
 
 <center>
-```{r 05-unbalanced-neighbours, echo = FALSE, fig.height = 4, fig.width = 5}
+```{r 05-upsample, echo=FALSE, fig.height = 4, fig.width = 5, warning=FALSE}
 new_point <- c(3, 2)
 attrs <- c("Perimeter", "Concavity")
 my_distances <- table_with_distances(rare_cancer[,attrs], new_point)
