--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -54,7 +54,7 @@ and accurately diagnose the tumour type to guide patient treatment.
 
 Our first step is to load, wrangle, and explore the data using visualizations in order to better understand the data we are working with.
 We start by loading the necessary libraries for our analysis. Below you'll see (in addition to the usual `tidyverse`) a new library, `forcats`, that 
-enables us to easily manipulate factors in R. Factors are a special categorical type of variable in R that are very helpful when doing statistical inference and 
+enables us to easily manipulate factors in R. Factors are a special categorical type of variable in R that are very helpful when doing data analysis with categorical variables.
 machine learning with categorical variables.
 
 ```{r 05-load-libraries, message = FALSE}
