--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -6,7 +6,7 @@ first foray into answering *predictive* questions about data. In particular, we 
 using one or more quantitative variables to predict the value of a third, categorical variable. This chapter will cover the basics of classification,
 how to preprocess data to make it suitable for use in a classifier,
 and how to use our observed data to make predictions. The next will focus on how to evaluate how accurate the predictions from our classifier are, as well as how to 
-choose the parameters of the classifier in order to maximize its accuracy.
+improve our classifier (where possible) to maximize its accuracy.
 
 ## Chapter learning objectives 
 - Recognize situations where a classifier would be appropriate for making predictions
