--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -387,7 +387,7 @@ Using this package will help keep our code simple, readable and accurate; the le
 
 We start off by loading the `caret` library:
 
-```{r 05-caret}
+```{r 05-caret, message=FALSE}
 library(caret)
 ```
 
