--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -412,7 +412,17 @@ head(cancer_labels)
 We will use the function `train()`, where the argument `x` is a data frame object containing the explanatory variables/predictors, and `y` is a numeric or factor vector containing 
 the outcomes/labels/classes. The arguments `x` and `y` should come from the original data frame and be in the same order. The argument `tuneGrid` should be a data frame with 
 possible "tuning values". For now, just know that this is where we will specify $K=5$ (the number of nearest neighbours to vote on the predicted class). We will discuss how to 
-choose $K$ in the next chapter. We will use "knn" as our `method`. 
+We will use the function `train()`, where:
+
+- `x` is a data frame object containing the explanatory variables/predictors,
+- `y` is a numeric or factor vector containing the outcomes/labels/classes,
+- `method` is the type of prediction algorithm we want to use, we will use "knn", and
+- `tuneGrid` is a data frame with possible "tuning values". For now, just know that this is where we will specify $K=5$ (the number of nearest neighbours to vote on the predicted class).
+
+The arguments `x` and `y` should come from the original data frame and be in the same order. We will also discuss how to choose $K$ in the next chapter. 
+
+
+
 
 
 ```{r 05-train}
